@@ -2,6 +2,7 @@ AUX ruby-1.8.6-memory-leak.diff 1351 RMD160 cba1335fcd52df26b4b2884dea14e0c74852
 AUX ruby-1.8.6-revert-r15856.patch 3389 RMD160 06cb82094586a1d893b1da5245063bd6f4beb9e1 SHA1 74fa9b4c2485c953ad791516806a75ba70ce5368 SHA256 16394b4e748996ef92419909f49fc59aa5938f76691eb5d7188b056d2b725efc
 AUX ruby-1.9.0.4-entity_expansion_limit.diff 3402 RMD160 aa437e3f52576a8bd04fad6525c805c518fe800a SHA1 e416f1e7ae6f6cc19eabc0223cabca984b68960e SHA256 5268c4f4a9b767bc4270f5af103aa78aa76057132e6ed9ce1e1dafc2824082f9
 DIST ruby-1.9.0-4.tar.bz2 5546544 RMD160 16021e0ac7c148cd6eea3c4e9665f52301ae7ad0 SHA1 066b35fa0e860c5392a1382b065fbba582d9de46 SHA256 09a91a60fba308a45ab8d3e691ec5ab279b36b646e75ad68d1d45679bdc4cbce
+EBUILD ruby-1.9.0.4-r1.ebuild 4771 RMD160 5930024c6bda00dd7402e2a911826f9d0d361391 SHA1 19c216c4b4538d49a4442b5aef76e0b6e2d2407e SHA256 56a5a45e602078b9a9ac6a5f2a30379d313155e562eca7c1d0668e0b279befa8
 EBUILD ruby-1.9.0.4.ebuild 4672 RMD160 5db8825429138d8dfe1dbf5a2af0cf790783bbcd SHA1 d9b39afc42ec6c39704acf2d5657a62dc80b0c0f SHA256 1cb5e53d5db6aeb264c9f6c53c1b4e954597a6256bbb0ed13927dac210b33c5e
-MISC ChangeLog 50916 RMD160 68e9a142ee1b8cbd16d156831e81c312df6d3670 SHA1 b77f4df5560d5b2d4b3befb34695c306195f3df0 SHA256 1b6ffa3f1c199d3fb905b79ce3c86f4c48b705e75e2810521a96ad389b3318a7
+MISC ChangeLog 51023 RMD160 8eb49898d4aa6bad44853850601c442ce5bfe762 SHA1 823289829a6497f5d6c3985c6f54152bf1234695 SHA256 26507756022cbe49618821c9d569265010a49d75412957bc7f61e1b2ae2e60c1
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
